--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="jumbotron">
-                <h1>Hello Yeoman!</h1>
+                <h1>Hello new feature!</h1>
                 <p class="lead">Always a pleasure scaffolding your apps.</p>
                 <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
             </div>
