Overides Bootstrap's variables

--- a/app/index.html
+++ b/app/index.html
@@ -34,13 +34,33 @@
             </div>
 
             <div class="jumbotron">
-                <h1>Hello new feature!</h1>
-                <p class="lead">Always a pleasure scaffolding your apps.</p>
+                <h1>Hello new workflow!</h1>
+                <p class="lead">Always a pleasure running after progress...</p>
                 <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
             </div>
 
             <div class="row marketing">
                 <div class="col-lg-6">
+                    <h3>Build taskforce</h3>
+                    <h4>Node</h4>
+                    <p>Node.js is a platform built on Chrome's JavaScript runtime for easily building fast, scalable network applications.</p>
+                    <p>Node.js uses an event-driven, non-blocking I/O model that makes it lightweight and efficient, perfect for data-intensive real-time applications that run across distributed devices.
+                    Current Version: v0.10.20</p>
+
+                    <h4>Git</h4>
+                    <p>Git is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.</p>
+                    <p>Git is easy to learn and has a tiny footprint with lightning fast performance. It outclasses SCM tools like Subversion, CVS, Perforce, and ClearCase with features like cheap local branching, convenient staging areas, and multiple workflows.</p>
+
+                    <h4>Yeoman tools</h4>
+                    <p>Yeoman 1.0 is more than just a tool. It's a workflow; a collection of tools and best practices working in harmony to make developing for the web even better.</p>
+                    <p>Our workflow is comprised of three tools for improving your productivity and satisfaction when building a web app: yo (the scaffolding tool), grunt (the build tool) and bower (for package management).</p>
+
+                    <h4>Sublime Text</h4>
+                    <p>Sublime Text is a sophisticated text editor for code, markup and prose. You'll love the slick user interface, extraordinary features and amazing performance.</p>
+
+                </div>
+                <div class="col-lg-6">
+                    <h3>Front-end magic</h3>
                     <h4>HTML5 Boilerplate</h4>
                     <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
 
@@ -49,7 +69,6 @@
 
                     <h4>Modernizr</h4>
                     <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
-
 
                     <h4>RequireJS</h4>
                     <p>RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node.</p>
